# routes/favorites.go
@@ -9,6 +9,7 @@ import (
 func SetupFavoritesRoutes(router fiber.Router) {
 	favorites := router.Group("/favorites/:userId/:collectionId")
 	favorites.Get("/", handlers.GetFavorites)
-	favorites.Post("/", handlers.CreateFavorite)
-	favorites.Delete("/:favoriteId", handlers.DeleteFavorite)
+	favorites.Post("/:recipeId", handlers.CreateFavorite)
+	favorites.Put("/:favoriteId", handlers.UpdateFavorite)
+	favorites.Delete("favoriteId", handlers.DeleteFavorite)
 }
